[gd_scene load_steps=11 format=3 uid="uid://33ltwejnfnxf"]

[ext_resource type="Script" path="res://Scripts/moonMen.gd" id="1_axe66"]
[ext_resource type="AudioStream" uid="uid://dsuvkgw0kopig" path="res://Assets/music/Sacred.mp3" id="3_7jg6t"]
[ext_resource type="PackedScene" uid="uid://cvogeqmlxoi7g" path="res://Scenes/health_crate.tscn" id="4_l8c8p"]
[ext_resource type="PackedScene" uid="uid://df4ps4u5emquy" path="res://Scenes/game_manager.tscn" id="8_yfgf2"]
[ext_resource type="Texture2D" uid="uid://d2tap08rr5mnv" path="res://Assets/backgrounds/pixil-frame-0 - 2024-08-22T120948.107.png" id="9_y2a8p"]
[ext_resource type="PackedScene" uid="uid://cl0yf6cukdaim" path="res://Scenes/walls.tscn" id="10_cmiwi"]
[ext_resource type="PackedScene" uid="uid://dq68fw1fe1tiw" path="res://Scenes/sacred_tile_3.tscn" id="11_kskmq"]
[ext_resource type="PackedScene" uid="uid://cr2n1gfa6b6e0" path="res://Scenes/sacred_tile_4.tscn" id="11_u2hka"]
[ext_resource type="PackedScene" uid="uid://bfcpucjxkqhkh" path="res://Scenes/burst_crate.tscn" id="11_w5rpq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x577d"]
size = Vector2(106, 95)

[node name="moonMen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_axe66")

[node name="Camera2D" type="Camera2D" parent="."]
light_mask = 1023
visibility_layer = 1023

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 238.0
offset_top = 256.0
offset_right = 278.0
offset_bottom = 279.0

[node name="Start" type="MenuButton" parent="Label"]
layout_mode = 0
offset_left = 2.0
offset_top = -4.0
offset_right = 92.0
offset_bottom = 27.0
text = "Start!"

[node name="Area2D" type="Area2D" parent="Label/Start"]
position = Vector2(45, -18)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Label/Start/Area2D"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_x577d")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_7jg6t")
autoplay = true
bus = &"Music"

[node name="gameManager" parent="." instance=ExtResource("8_yfgf2")]

[node name="burstCrate" parent="." instance=ExtResource("11_w5rpq")]
position = Vector2(-134, 296)

[node name="healthCrate" parent="." instance=ExtResource("4_l8c8p")]
position = Vector2(-20, 298)

[node name="sacredTile4" parent="." instance=ExtResource("11_u2hka")]
position = Vector2(-373, 164)

[node name="sacredTile5" parent="." instance=ExtResource("11_u2hka")]
position = Vector2(351, 152)

[node name="sacredTile3" parent="." instance=ExtResource("11_kskmq")]
position = Vector2(-172, 82)

[node name="sacredTile6" parent="." instance=ExtResource("11_kskmq")]
position = Vector2(142, 80)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("9_y2a8p")

[node name="walls" parent="." instance=ExtResource("10_cmiwi")]

[node name="spawn" type="Marker2D" parent="."]
position = Vector2(-431, 72)

[node name="spawn2" type="Marker2D" parent="."]
position = Vector2(-337, 70)

[node name="spawn3" type="Marker2D" parent="."]
position = Vector2(278, 79)

[node name="spawn4" type="Marker2D" parent="."]
position = Vector2(418, 74)

[node name="respawnTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Label/Start/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Label/Start/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="respawnTimer" to="." method="_on_respawn_timer_timeout"]
